# r3d-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
examples/: decode.rs
headers/: cuda_runtime.h
headers/CL/: opencl.h
src/: asyncdecoder.rs  clip.rs  custom_io.rs  enums.rs  error.rs  future.rs  image_processing_limits.rs  image_processing_settings.rs  lib.rs  metadata.rs  r3ddecoder.rs  sdk.rs
src/debayer/: cuda.rs  metal.rs  mod.rs  opencl.rs
